[gd_scene load_steps=20 format=3 uid="uid://gr20nusvexfk"]

[ext_resource type="Script" uid="uid://clhircl18kdhh" path="res://badguys/badguy.gd" id="1_rsqxw"]
[ext_resource type="Script" uid="uid://bund4vdf4u4yo" path="res://common/components/health_component.gd" id="2_wdyyi"]
[ext_resource type="Script" uid="uid://cuiwxj3wnoqag" path="res://common/components/navigation_component.gd" id="3_hpfuj"]
[ext_resource type="Script" uid="uid://db57k26wi7ltc" path="res://common/components/melee_attack_component.gd" id="4_2dqk7"]
[ext_resource type="Script" uid="uid://d3w1w02heo866" path="res://common/components/state/fsm_component.gd" id="5_wj604"]
[ext_resource type="Script" uid="uid://c3mha4eajluii" path="res://badguys/states/badguy_idle_state.gd" id="6_adcty"]
[ext_resource type="Script" uid="uid://cdsndtjjy64gx" path="res://badguys/states/badguy_chase_state.gd" id="7_obivj"]
[ext_resource type="Script" uid="uid://bbx03qgt7jwev" path="res://badguys/states/badguy_attack_state.gd" id="8_clpwl"]
[ext_resource type="Script" uid="uid://dmrpfrb334jim" path="res://badguys/states/badguy_hurt_state.gd" id="9_pbr7h"]
[ext_resource type="Texture2D" uid="uid://gpicnsapcuh1" path="res://badguys/images/base/attack.png" id="10_2vs3u"]
[ext_resource type="Script" uid="uid://mgr8rmq8nlia" path="res://badguys/states/badguy_death_state.gd" id="10_10x2h"]
[ext_resource type="Texture2D" uid="uid://b18es1wagr8k" path="res://badguys/images/base/chase.png" id="11_ox0f7"]
[ext_resource type="Texture2D" uid="uid://cst00pgu6icw7" path="res://badguys/images/base/death.png" id="12_g6lxy"]
[ext_resource type="Texture2D" uid="uid://uqr7x8af0dfn" path="res://badguys/images/base/hurt.png" id="13_ej66v"]
[ext_resource type="Texture2D" uid="uid://bfk13v1s2xkft" path="res://badguys/images/base/idle.png" id="14_ocmoh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bug4s"]

[sub_resource type="SphereShape3D" id="SphereShape3D_221m0"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jl7e4"]
points = PackedVector3Array(0, 0, 0, 3, 0, 7, -3, 0, 7)

[sub_resource type="SpriteFrames" id="SpriteFrames_qwje0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_2vs3u")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ox0f7")
}],
"loop": true,
"name": &"chase",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_g6lxy")
}],
"loop": false,
"name": &"death",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_ej66v")
}],
"loop": false,
"name": &"hurt",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_ocmoh")
}],
"loop": true,
"name": &"idle",
"speed": 30.0
}]

[node name="BaseBadguy" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 23
script = ExtResource("1_rsqxw")

[node name="HealthComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_wdyyi")
MAX_HEALTH = 3
metadata/_custom_type_script = "uid://bund4vdf4u4yo"

[node name="MeleeAttackComponent" type="Node" parent="." node_paths=PackedStringArray("attack_area")]
script = ExtResource("4_2dqk7")
attack_area = NodePath("../PlayerDamageArea")
metadata/_custom_type_script = "uid://db57k26wi7ltc"

[node name="NavigationComponent" type="Node" parent="." node_paths=PackedStringArray("navigation_agent")]
unique_name_in_owner = true
script = ExtResource("3_hpfuj")
navigation_agent = NodePath("../NavigationAgent3D")
metadata/_custom_type_script = "uid://cuiwxj3wnoqag"

[node name="FSMComponent" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_wj604")
metadata/_custom_type_script = "uid://d3w1w02heo866"

[node name="BadguyIdleState" type="Node" parent="FSMComponent"]
script = ExtResource("6_adcty")
metadata/_custom_type_script = "uid://c3mha4eajluii"

[node name="BadguyChaseState" type="Node" parent="FSMComponent" node_paths=PackedStringArray("navigation_component")]
script = ExtResource("7_obivj")
navigation_component = NodePath("../../NavigationComponent")
attack_distance = 1.5
metadata/_custom_type_script = "uid://cdsndtjjy64gx"

[node name="BadguyAttackState" type="Node" parent="FSMComponent" node_paths=PackedStringArray("attack_component")]
script = ExtResource("8_clpwl")
attack_component = NodePath("../../MeleeAttackComponent")
metadata/_custom_type_script = "uid://bbx03qgt7jwev"

[node name="BadguyHurtState" type="Node" parent="FSMComponent"]
script = ExtResource("9_pbr7h")
hit_stun_length = 0.25
metadata/_custom_type_script = "uid://dmrpfrb334jim"

[node name="BadguyDeathState" type="Node" parent="FSMComponent"]
script = ExtResource("10_10x2h")
metadata/_custom_type_script = "uid://mgr8rmq8nlia"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_bug4s")
debug_color = Color(0, 0.6, 0.701961, 1)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
unique_name_in_owner = true

[node name="PlayerDamageArea" type="Area3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
collision_layer = 64
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDamageArea"]
shape = SubResource("SphereShape3D_221m0")
debug_color = Color(1, 0, 0, 0.419608)

[node name="DetectionArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 64
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("ConvexPolygonShape3D_jl7e4")
debug_color = Color(1, 0, 1, 1)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
billboard = 1
double_sided = false
texture_filter = 2
sprite_frames = SubResource("SpriteFrames_qwje0")
animation = &"idle"
